--- a/Prevu.Synoptics.V3001-COVERIS/D520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D520.xaml
@@ -7,7 +7,7 @@
 						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             Height="300" Width="300" d:Background="{DynamicResource MaterialDesignPaper}">
+             Height="300" Width="400" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="188,40,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-27-CV1" Color="Air"/>
 
@@ -22,6 +22,7 @@
 		<Labels:Pipe HorizontalAlignment="Left" Margin="188,250,0,0" VerticalAlignment="Top" Width="68" StatusComponent="520-27-CV4" Color="Air"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="32,228,0,0" VerticalAlignment="Top" ComponentName="520-27-CV4"/>
 		<Machines:CV_Valve HorizontalAlignment="Left" Margin="131,216,0,0" VerticalAlignment="Top" Height="74" Width="67"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="290,0,0,0" VerticalAlignment="Center" ComponentName="520-VLV-BLK"/>
 
 	</Grid>
 </UserControl>
