--- a/Prevu.Synoptics.V3001-COVERIS/P380.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P380.xaml
@@ -210,7 +210,7 @@
 		</Machines:CV_Valve>
 		<Machines:Waste HorizontalAlignment="Left" Margin="1152,371,0,0" VerticalAlignment="Top" Height="56" Width="64"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="696,269,0,0" 
+            Margin="850,388,0,0" 
             VerticalAlignment="Top" 
             ComponentName="380-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
@@ -265,6 +265,14 @@
             VerticalAlignment="Top" 
             JumpFromLabel="386-01-MA1" 
             JumpToLabel="352-01-MA1"/>
-		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="791,269,0,0" VerticalAlignment="Top" ComponentName="380-VALV" DetailsPageName="D380"/>
+		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="791,269,0,0" VerticalAlignment="Top" ComponentName="380-VLV" DetailsPageName="D380"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="696,269,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="380-DCE" RenderTransformOrigin="0.567,-2.17"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="850,448,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="380-01-YA1" RenderTransformOrigin="0.567,-2.17"/>
 	</Grid>
 </UserControl>
