--- a/Prevu.Synoptics.V3001-COVERIS/P520.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P520.xaml
@@ -291,7 +291,7 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="757,263,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="520-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
+            ComponentName="520-DCE" RenderTransformOrigin="0.567,-2.17"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="105,437,0,0" 
             VerticalAlignment="Top" 
@@ -320,6 +320,14 @@
             VerticalAlignment="Top" 
             JumpFromLabel="529-01-MA1" 
             JumpToLabel="380-23-CV1"/>
-		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="850,263,0,0" VerticalAlignment="Top" ComponentName="520-VALV" DetailsPageName="D520"/>
+		<Labels:DetailsLabel HorizontalAlignment="Left" Margin="850,263,0,0" VerticalAlignment="Top" ComponentName="520-VLV" DetailsPageName="D520"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="910,392,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="520-01-MA1" RenderTransformOrigin="0.567,-2.17"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" 
+		Margin="910,448,0,0" 
+		VerticalAlignment="Top" 
+		ComponentName="520-01-YA1" RenderTransformOrigin="0.567,-2.17"/>
 	</Grid>
 </UserControl>
