Update synoptics name

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P330.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P330.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.S330" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="266,86,0,0" VerticalAlignment="Top" Width="298" StatusComponent="322-01-MA1" PipeHeight="Medium"/>
