--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P530.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P530.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.S530" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P530" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="807,230,0,0" VerticalAlignment="Top" Height="45" Width="46"/>
