--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
@@ -6,7 +6,7 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
 						 xmlns:lex="http://wpflocalizeextension.codeplex.com"
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.S880" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P880" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="131,70,0,0" VerticalAlignment="Top" Width="179" StatusComponent="872-01-MA1" PipeHeight="Medium"/>
