--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P350.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P350.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.S350" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P350" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="541,222,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="78" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
