--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P420.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P420.xaml
@@ -5,7 +5,7 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             x:Class="Prevu.Synoptics.S420" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P420" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Margin="792,401,0,0" VerticalAlignment="Top" Width="90" StatusComponent="440-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
