--- a/Prevu.Synoptics.V3001-COVERIS/P350.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P350.xaml
@@ -298,16 +298,6 @@
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="272,650,0,0" Stroke="Black" VerticalAlignment="Top" Width="54"/>
         <Rectangle HorizontalAlignment="Left" Height="0" Margin="945,460,0,0" Stroke="Black" VerticalAlignment="Top" Width="50"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Margin="665,561,0,0" Stroke="Black" VerticalAlignment="Top" Width="2"/>
-        <Rectangle HorizontalAlignment="Left" Height="46" Margin="1139,558,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="36" Margin="484,668,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
             <d:Rectangle.RenderTransform>
                 <TransformGroup>
@@ -617,5 +607,15 @@
             VerticalAlignment="Top" 
             JumpFromLabel="350-01-MA1" 
             JumpToLabel="TO BE-DEFINED"/>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="1138,560,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
     </Grid>
 </UserControl>
