Update synoptic with image

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P050.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P050.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.P050" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1234,565,0,0" VerticalAlignment="Top" Width="36" StatusComponent="074-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1244,514,0,0" VerticalAlignment="Top" Width="36" StatusComponent="074-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -18,7 +18,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1181,549,0,0" VerticalAlignment="Top" Width="74" StatusComponent="074-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1191,498,0,0" VerticalAlignment="Top" Width="74" StatusComponent="074-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -322,7 +322,6 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1012,541,0,0" VerticalAlignment="Top" Width="185"/>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="722,412,0,0" VerticalAlignment="Top"/>
         <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="230,92,0,0" VerticalAlignment="Top" Height="170" Width="130" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
@@ -390,7 +389,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:Waste HorizontalAlignment="Left" Margin="1230,566,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
+        <Machines:Waste HorizontalAlignment="Left" Margin="1240,515,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
         <Machines:Waste HorizontalAlignment="Left" Margin="819,142,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
         <Machines:External HorizontalAlignment="Left" Margin="1003,738,0,0" VerticalAlignment="Top" Height="61" Width="57" RenderTransformOrigin="0.5,0.5">
             <Machines:External.RenderTransform>
@@ -503,5 +502,6 @@
             Margin="480,148,0,0" 
             VerticalAlignment="Top" 
             ComponentName="050-02-MA1"/>
+        <Machines:Buffer_belt HorizontalAlignment="Left" Margin="1011,492,0,0" VerticalAlignment="Top" Height="70" Width="192"/>
     </Grid>
 </UserControl>
