--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P140.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P140.xaml
@@ -170,18 +170,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="918,780,0,0" VerticalAlignment="Top" Width="105" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="14"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="822,699,0,0" VerticalAlignment="Top" Width="197" StatusComponent="180-01-MA1" PipeHeight="Medium" Height="14"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="973,741,0,0" VerticalAlignment="Top" Width="90" StatusComponent="180-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="453,703,0,0" VerticalAlignment="Top" Width="180" StatusComponent="161-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Height="6">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -303,10 +292,10 @@
             </Labels:JumpLabel.RenderTransform>
         </Labels:JumpLabel>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="848,752,0,0" 
+            Margin="960,668,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="180-01-MA1" 
-            JumpToLabel="032-01-MA1" Direction="Left"/>
+            JumpToLabel="032-01-MA1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="1263,456,0,0" 
             VerticalAlignment="Top" 
