--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/P880.xaml
@@ -61,7 +61,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="23,266,0,0" VerticalAlignment="Top" Width="218" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="95,195,0,0" VerticalAlignment="Top" Width="75" StatusComponent="885-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -131,7 +131,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="405,245,0,0" VerticalAlignment="Top" Width="289" StatusComponent="887-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="478,172,0,0" VerticalAlignment="Top" Width="144" StatusComponent="887-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -234,7 +234,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="659,241,0,0" VerticalAlignment="Top" Width="220" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="755,146,0,0" VerticalAlignment="Top" Width="29" StatusComponent="883-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -280,36 +280,6 @@
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="865,170,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
         <Machines:BBF_BigBagFilling HorizontalAlignment="Left" Margin="1128,570,0,0" VerticalAlignment="Top" Height="127" Width="110"/>
         <Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1085,164,0,0" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="63,428,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="140" Height="22">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="478,445,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="144" Height="22">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" Margin="695,356,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="144" Height="22">
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleY="0.068"/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform X="-0.082"/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
         <Machines:VT_BlowerCentrifuge_down HorizontalAlignment="Left" Margin="292,705,0,0" VerticalAlignment="Top" Height="70" Width="66"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="222,745,0,0" Stroke="Black" VerticalAlignment="Top" Width="28" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
@@ -322,8 +292,6 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="84" Margin="278,187,0,0" VerticalAlignment="Top" Width="76" Fill="Gray" RadiusX="15" RadiusY="15"/>
-        <Rectangle HorizontalAlignment="Left" Height="41" Margin="492,505,0,0" VerticalAlignment="Top" Width="68" Fill="Gray" RadiusX="15" RadiusY="15"/>
-        <Rectangle HorizontalAlignment="Left" Height="41" Margin="709,416,0,0" VerticalAlignment="Top" Width="68" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="2" Margin="294,332,0,0" Stroke="Black" VerticalAlignment="Top" Width="119" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
@@ -347,7 +315,6 @@
         </Rectangle>
         <Rectangle HorizontalAlignment="Left" Height="125" Margin="253,271,0,0" VerticalAlignment="Top" Width="202" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Rectangle HorizontalAlignment="Left" Height="84" Margin="354,187,0,0" VerticalAlignment="Top" Width="76" Fill="Gray" RadiusX="15" RadiusY="15"/>
-        <Rectangle HorizontalAlignment="Left" Height="42" Margin="123,489,0,0" VerticalAlignment="Top" Width="67" Fill="Gray" RadiusX="15" RadiusY="15"/>
         <Machines:External HorizontalAlignment="Left" Margin="1209,80,0,0" VerticalAlignment="Top" Height="74" Width="72"/>
         <TextBlock HorizontalAlignment="Left" Margin="1000,171,0,0" TextWrapping="Wrap" 
 							 VerticalAlignment="Top" Height="89" Width="105" TextAlignment="Right" 
@@ -441,5 +408,26 @@
       Margin="1090,759,0,0" 
       VerticalAlignment="Top" 
       ComponentName="997-65-BBF"/>
+        <Machines:SCW_Flex_Verticale_DX HorizontalAlignment="Left" Margin="108,219,0,315"/>
+        <Machines:SCW_Flex_Verticale_DX HorizontalAlignment="Left" Margin="486,240,0,294" RenderTransformOrigin="0.5,0.5">
+            <Machines:SCW_Flex_Verticale_DX.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:SCW_Flex_Verticale_DX.RenderTransform>
+        </Machines:SCW_Flex_Verticale_DX>
+        <Machines:SCW_Flex_Verticale_DX HorizontalAlignment="Left" Margin="705,149,0,385" RenderTransformOrigin="0.5,0.5">
+            <Machines:SCW_Flex_Verticale_DX.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Machines:SCW_Flex_Verticale_DX.RenderTransform>
+        </Machines:SCW_Flex_Verticale_DX>
     </Grid>
 </UserControl>
