--- a/Prevu.Synoptics.V3001-COVERIS/D099.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/D099.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Prevu.Synoptics.D09971EXT"
+﻿<UserControl x:Class="Prevu.Synoptics.D099"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,7 +9,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" Height="450" MinWidth="450">
     <Grid>
-        <Machines:External HorizontalAlignment="Left" Margin="60,-16,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="70">
+        <Machines:External HorizontalAlignment="Left" Margin="52,-16,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="70">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -19,7 +19,7 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Rectangle HorizontalAlignment="Left" Height="271" Margin="260,-102,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="271" Margin="252,-102,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" RenderTransformOrigin="0.5,0.5">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -30,51 +30,51 @@
             </Rectangle.RenderTransform>
         </Rectangle>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="200,44,0,0" 
+		Margin="192,44,0,0" 
 		VerticalAlignment="Top" 
 		ComponentName="099-71-ECS1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,67,0,0" 
+            Margin="296,67,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS2" RenderTransformOrigin="0.478,1.12"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="200,106,0,0" 
+            Margin="192,106,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS3"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,129,0,0" 
+            Margin="296,129,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS4"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="200,168,0,0" 
+            Margin="192,168,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS5"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,192,0,0" 
+            Margin="296,192,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS6" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="200,230,0,0" 
+            Margin="192,230,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS7" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,254,0,0" 
+            Margin="296,254,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS8" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,316,0,0" 
+            Margin="296,316,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS10" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="200,292,0,0" 
+            Margin="192,292,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS9" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="200,355,0,0" 
+            Margin="192,355,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS11" Loaded="DeviceLabel_Loaded"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="304,378,0,0" 
+            Margin="296,378,0,0" 
             VerticalAlignment="Top" 
             ComponentName="099-71-ECS12" Loaded="DeviceLabel_Loaded"/>
     </Grid>
