--- a/Prevu.Synoptics.V3001-COVERIS/P330.xaml
+++ b/Prevu.Synoptics.V3001-COVERIS/P330.xaml
@@ -108,7 +108,7 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1156,671,0,0" VerticalAlignment="Top" Width="133" StatusComponent="336-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="269,80,0,0" VerticalAlignment="Top" Width="103" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="20"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="345,115,0,0" VerticalAlignment="Top" Width="54" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="326-21-ZS1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="345,115,0,0" VerticalAlignment="Top" Width="54" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS1" VisibilityComponent="326-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -118,8 +118,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="381,80,0,0" VerticalAlignment="Top" Width="516" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" VisibilitySignal="326-21-ZS2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="861,106,0,0" VerticalAlignment="Top" Width="62" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="326-21-ZS2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="381,80,0,0" VerticalAlignment="Top" Width="516" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="861,106,0,0" VerticalAlignment="Top" Width="62" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" VisibilitySignal="LS2" VisibilityComponent="326-21-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
